# mcp-terminal-server-docker

./: LICENSE  README.md
terminal_server/: README.md  pyproject.toml  requirements.txt  terminal_server.py
